# CNIFace

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  FacePreprocess.h  README.md  anchor_generator.cpp  anchor_generator.h  common.cpp  common.h  config.h  main.cpp  ulsMatF.h
.github/workflows/: publish.yml
CNIFace/: .gitignore  CMakeLists.txt  README.md  main.cpp
CNIFace/arcface/: ArcFace.h
CNIFace/convert_model/: from_onnx_arcface_w600k_mbf.py  from_onnx_arcface_w600k_r50.py  from_onnx_ch_PP-OCRv3_det_infer.py  from_onnx_ch_ppocr_mobile_v2.0_cls_infer.py  from_onnx_retinaface_det_500m.py
CNIFace/docker/: docker-compose.yaml
CNIFace/grpc/: cniface.grpc.pb.h  cniface.pb.cc  cniface.proto
CNIFace/mnet_cov2/: MNetCov2.cpp
CNIFace/ppocr/: clipper.cpp  ocr_cls.cpp  ocr_cls.h  ocr_rec.cpp  ocr_rec.h  postprocess_op.cpp  postprocess_op.h  preprocess_op.cpp  preprocess_op.h
CNIFace/repository/: Repository.cpp  SearchResult.cpp  SearchResult.h
CNIFace/retinaface/: RetinaFace.cpp
CNIFace/samples/: detect.cpp  detect_camera.cpp  detect_cov2.cpp  recognition.cpp  recognition_camera.cpp
CNIFace/service/: DetectService.cpp  RecognitionService.h  RepositoryService.cpp  RepositoryService.h
CNIFace/utils/: CPUTimer.cpp  CPUTimer.h  FileUtil.h  ImageUtil.cpp  MathUtil.cpp  MathUtil.h  base64.h  easylogging++.cpp  easylogging++.h
CNIFaceBase/: Dockerfile  README.md
CNIFaceBase/.github/workflows/: publish.yml
CNIFacePlatform/: .gitignore  Dockerfile  README.md  build.gradle  settings.gradle
CNIFacePlatform/.github/workflows/: publish.yml
CNIFacePlatform/gradle/wrapper/: gradle-wrapper.properties
CNIFacePlatform/proto/: README.md
CNIFacePlatform/src/main/java/cn/abellee/cniface/platform/: CNIFacePlatformApplication.java
CNIFacePlatform/src/main/java/cn/abellee/cniface/platform/common/: Constants.java
CNIFacePlatform/src/main/java/cn/abellee/cniface/platform/config/: CNIFaceModelProperties.java  GlobalClientInterceptorConfiguration.java
CNIFacePlatform/src/main/java/cn/abellee/cniface/platform/contoller/: AttributeController.java  DetectController.java  DetectWithMaskController.java  OCRController.java  RecognitionController.java  RepositoryController.java
CNIFacePlatform/src/main/java/cn/abellee/cniface/platform/exception/: CNIFaceException.java  GlobalExceptionHandler.java
CNIFacePlatform/src/main/java/cn/abellee/cniface/platform/interceptor/: CNIFaceGrpcInterceptor.java
CNIFacePlatform/src/main/java/cn/abellee/cniface/platform/repository/: RepositoryRepository.java
CNIFacePlatform/src/main/java/cn/abellee/cniface/platform/security/: JwtAccessDeniedHandler.java  JwtAuthenticationEntryPoint.java  SecurityUtils.java  UserEntityDetailsService.java  UserNotActivatedException.java  UserNotFoundException.java
CNIFacePlatform/src/main/java/cn/abellee/cniface/platform/service/: IAttributeService.java  IDetectService.java  IOCRService.java  IRecognitionService.java  IRepositoryService.java
CNIFacePlatform/src/main/resources/: application.yml  banner.txt  import.sql
CNIFaceWeb/: Dockerfile  package.json
CNIFaceWeb/.github/workflows/: publish.yml
CNIFaceWeb/config/: config.ts  defaultSettings.ts  proxy.ts  routes.ts
CNIFaceWeb/mock/: user.ts
CNIFaceWeb/nginx/: default.conf.template
CNIFaceWeb/public/: CNAME
CNIFaceWeb/src/: access.ts  app.tsx  manifest.json
CNIFaceWeb/src/components/FaceCard/: index.less  index.tsx
CNIFaceWeb/src/components/FaceDetector/: index.less  index.tsx
CNIFaceWeb/src/components/Footer/: index.tsx
CNIFaceWeb/src/components/RightContent/: AvatarDropdown.tsx  index.tsx
CNIFaceWeb/src/locales/: en-US.ts  zh-CN.ts
CNIFaceWeb/src/locales/en-US/: component.ts  face.ts  globalHeader.ts  menu.ts  pages.ts
CNIFaceWeb/src/locales/zh-CN/: component.ts  face.ts  globalHeader.ts  menu.ts  pages.ts
CNIFaceWeb/src/pages/: 404.tsx  document.ejs
CNIFaceWeb/src/pages/FaceComparison/: data.d.ts  index.less  index.tsx
CNIFaceWeb/src/pages/Login/: index.less  index.tsx
CNIFaceWeb/src/pages/RepoItem/: index.less  index.tsx
CNIFaceWeb/src/pages/Repository/: index.less  index.tsx
CNIFaceWeb/src/services/cniface/: api.ts  typings.d.ts
CNIFaceWeb/src/services/swagger/: index.ts  typings.d.ts
CNIFaceWeb/src/utils/: index.tsx
arcface/: ArcFace.cpp  ArcFace.h
common/: Anchor.cpp  Anchor.h  common.h
convert_model/: from_mxnet_mnet.25.py  from_mxnet_mnet_cov2.py  from_mxnet_mobilefacenet.py  from_onnx_arcface.py  from_onnx_ch_PP-OCRv3_rec_infer.py  from_onnx_genderage.py  from_onnx_retinaface.py
docker/: docker-compose.yaml
docker/base/: Dockerfile  README.md  build_image.sh
docker/cniface/: Dockerfile  build_image.sh  docker-compose.yaml
genderage/: GenderAge.cpp  GenderAge.h
grpc/: cniface.grpc.pb.cc  cniface.grpc.pb.h  cniface.pb.cc  cniface.pb.h  cniface.proto  detect.grpc.pb.cc  detect.grpc.pb.h  detect.pb.cc  detect.pb.h  detect.proto  generate_grpc.sh  recognition.grpc.pb.cc  recognition.grpc.pb.h  recognition.pb.cc  recognition.pb.h  recognition.proto  repository.grpc.pb.cc  repository.grpc.pb.h  repository.pb.cc  repository.pb.h  repository.proto
mnet_cov2/: MNetCov2.cpp  MNetCov2.h
mobilefacenet/: MobileFaceNetDeploy.cpp  MobileFaceNetDeploy.h
models/: README.md
models/relay/: README.md
ppocr/: clipper.h  ocr_det.cpp  ocr_det.h  utility.cpp  utility.h
repository/: Repository.cpp  Repository.h
retinaface/: RetinaFace.cpp  RetinaFace.h  RetinaFaceDeploy.cpp  RetinaFaceDeploy.h  anchor_generator.h  tools.cpp
samples/: attribute.cpp  detect.cpp  detect_camera.cpp  detect_cov2_camera.cpp  ppocr.cpp  recognition.cpp  recognition_camera.cpp  repository.cpp  retrieval.cpp
service/: AttributeService.cpp  AttributeService.h  DetectService.cpp  DetectService.h  DetectWithMaskService.cpp  DetectWithMaskService.h  OCRService.cpp  OCRService.h  RecognitionService.cpp  RecognitionService.h  RepositoryService.cpp  RepositoryService.h
utils/: CPUTimer.cpp  CPUTimer.h  CVUtil.cpp  CVUtil.h  FileUtil.cpp  FileUtil.h  ImageUtil.cpp  ImageUtil.h  Log.h  MathUtil.cpp  MathUtil.h  base64.cpp
(+70 files in other folders)
